added excel download

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "morgan": "~1.9.1",
     "pg": "^8.8.0",
     "pug": "^3.0.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^18.7.13",
