--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "package": "rm -rf node_modules;rm yarn.lock;yarn cache clean;yarn install"
   },
   "dependencies": {
+    "autolinker": "^4.0.0",
     "body-parser": "^1.20.0",
     "chart.js": "^3.9.1",
     "cookie-parser": "~1.4.4",
@@ -23,6 +24,7 @@
     "i18next": "^21.9.1",
     "i18next-fs-backend": "^1.1.5",
     "i18next-http-middleware": "^3.2.1",
+    "markdown-it": "^13.0.1",
     "memorystore": "^1.6.7",
     "morgan": "~1.9.1",
     "pg": "^8.8.0",
