--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "autolinker": "^4.0.0",
+    "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "chart.js": "^3.9.1",
     "cookie-parser": "~1.4.4",
